feat: Oracle OpenJDK 기준 Java 공식 권장사항 반영